--- a/index.css
+++ b/index.css
@@ -1,3 +1,57 @@
 #heading {
     color: brown;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo {
+    width: 100px;
+}
+
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+    padding-right: 30px;
+    font-size: 16px;
+}
+
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-card {
+    width: 200px;
+    /* border: 1px solid black; */
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid transparent;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.search {
+    padding: 10px;
+}
+
+.res-logo {
+    width: 100%;
+    height: 100px;
+}
+
+.filter-btn {
+    margin: 10px;
+    cursor: pointer;
+}
