--- a/index.css
+++ b/index.css
@@ -55,3 +55,23 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    height: 300px;
+    width: 200px;
+    background-color: #f0f0f0;
+    margin: 20px;
+}
+
+.header-option {
+    cursor: pointer;
+}
+
+.filter {
+    display: flex;
+}
